--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title></title>
+
+	<link rel ="mask-icon" href="https://assets-cdn.github.com/pinned-octocat.svg" color="#000000">
+	<link rel ="icon" type="image/x-icon" href="favicon.png">
 	<link rel="stylesheet" href="styles.css">
 </head>
 <body>
