--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
 	<link rel="stylesheet" href="styles.css">
 </head>
 <body>
-	<div>Hello Github</div> 
+	<div>Hello Github!</div> 
 </body>
 </html>
