--- a/index.html
+++ b/index.html
@@ -415,6 +415,7 @@
                 <li class="header">PAGE ORDER</li>
                 <li><a href="welcome-page.html" class="ico-app-intergration">Welcome</a></li>
                 <li><a href="modal-page.html" class="ico-app-intergration">Modal</a></li>
+                <li><a href="component.html" class="ico-app-intergration">Component</a></li>
             </ul>
         </div>
     </aside>
