--- a/pending-reviews-page.html
+++ b/pending-reviews-page.html
@@ -420,7 +420,7 @@
     <!-- CONTENT WRAPPER -->
     <div class="wrapper-content">
         <div class="clearfix"></div>
-        <div class="wrapper-space">
+        <div class="wrapper-space pending-reviews-page">
             <!-- Wrapper table action top  -->
             <div class="wrapper-tbl-action">
                 <label class="wrap-custom-box d-inline-block"> Total: <span class="color-pink">120</span> reviews
