--- a/welcome-page.html
+++ b/welcome-page.html
@@ -433,7 +433,7 @@
                         </div>
 
                         <div class="col-md-2">
-                            <button class="btn btn-primary fw-bold wow fadeInUp" data-wow-delay=".9s">ENTER</button>
+                            <button class="btn btn-primary fw-bold wow fadeInUp" data-wow-delay=".9s" style="height: 40px;">ENTER</button>
                         </div>
                     </div>
                 </form>
