--- a/index.html
+++ b/index.html
@@ -90,6 +90,9 @@
     <!-- HEADER -->
     <header class="main-header">
         <a href="#" class="logo">
+            <button class="btn-link sidebar-toggle hidden-xs hidden-sm" data-toggle="push-menu" role="button">
+                <span class="icon-ic-menu-24px"></span>
+            </button>
             <!-- mini logo for sidebar mini 50x50 pixels -->
             <!-- <span class="logo-mini"><b>A</b>LR</span> -->
 
