--- a/modal-page.html
+++ b/modal-page.html
@@ -349,7 +349,7 @@
                 <div class="modal-dialog" role="document">
                     <div class="modal-content">
                         <div class="modal-header mar-b-10">
-                            <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                            <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true" class="icon-ic-close-24px fz14"></span></button>
                             <!-- <h4 class="modal-title" id="myModalLabel">Title</h4> -->
                         </div>
 
@@ -487,7 +487,7 @@
                 <div class="modal-dialog" role="document">
                     <div class="modal-content">
                         <div class="modal-header">
-                            <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                            <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true" class="icon-ic-close-24px fz14"></span></button>
                         </div>
 
                         <div class="modal-body text-center">
@@ -512,7 +512,7 @@
                 <div class="modal-dialog" role="document">
                     <div class="modal-content">
                         <div class="modal-header">
-                            <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                            <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true" class="icon-ic-close-24px fz14"></span></button>
                         </div>
 
                         <div class="modal-body text-center">
@@ -527,7 +527,7 @@
 
                         <div class="modal-footer text-center mar-b-25">
                             <button type="button" class="btn btn-primary fw-bold">Check Now</button>
-                            <button type="button" class="btn btn-default fw-bold" data-dismiss="modal">+ Adding More</button>
+                            <button type="button" class="btn btn-default fw-bold">+ Adding More</button>
                         </div>
                     </div>
                 </div>
@@ -541,7 +541,7 @@
                 <div class="modal-dialog" role="document">
                     <div class="modal-content">
                         <div class="modal-header">
-                            <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                            <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true" class="icon-ic-close-24px fz14"></span></button>
                         </div>
 
                         <div class="modal-body text-center">
@@ -553,7 +553,7 @@
                         </div>
 
                         <div class="modal-footer text-center mar-b-25">
-                            <button type="button" class="btn btn-primary fw-bold w-xs-100 w-130px">Try Again</button>
+                            <button type="button" class="btn btn-primary fw-bold w-130px">Try Again</button>
                         </div>
                     </div>
                 </div>
@@ -567,7 +567,7 @@
                 <div class="modal-dialog" role="document">
                     <div class="modal-content">
                         <div class="modal-header">
-                            <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                            <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true" class="icon-ic-close-24px fz14"></span></button>
                         </div>
 
                         <div class="modal-body text-center mar-b-30">
@@ -591,7 +591,7 @@
                 <div class="modal-dialog" role="document">
                     <div class="modal-content">
                         <div class="modal-header">
-                            <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                            <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true" class="icon-ic-close-24px fz14"></span></button>
                         </div>
 
                         <div class="modal-body text-center">
@@ -639,7 +639,7 @@
                 <div class="modal-dialog" role="document">
                     <div class="modal-content">
                         <div class="modal-header">
-                            <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                            <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true" class="icon-ic-close-24px fz14"></span></button>
                         </div>
 
                         <div class="modal-body text-center">
@@ -655,7 +655,7 @@
                         </div>
 
                         <div class="modal-footer text-center mar-b-25">
-                            <button class="btn btn-primary fw-bold w-xs-100 w-130px">Submit</button>
+                            <button class="btn btn-primary fw-bold w-130px">Submit</button>
                         </div>
                     </div>
                 </div>
@@ -669,7 +669,7 @@
                 <div class="modal-dialog" role="document">
                     <div class="modal-content">
                         <div class="modal-header">
-                            <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                            <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true" class="icon-ic-close-24px fz14"></span></button>
                         </div>
 
                         <div class="modal-body text-center pad-b-0">
@@ -695,7 +695,7 @@
                         </div>
 
                         <div class="modal-footer text-center mar-b-25 pad-t-0">
-                            <button class="btn btn-primary fw-bold w-xs-100 w-130px">Next</button>
+                            <button class="btn btn-primary fw-bold w-130px">Next</button>
                         </div>
                     </div>
                 </div>
@@ -709,7 +709,7 @@
                 <div class="modal-dialog" role="document">
                     <div class="modal-content">
                         <div class="modal-header">
-                            <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                            <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true" class="icon-ic-close-24px fz14"></span></button>
                         </div>
 
                         <div class="modal-body pad-b-0 mar-b-20">
@@ -796,7 +796,7 @@
                 <div class="modal-dialog" role="document">
                     <div class="modal-content">
                         <div class="modal-header">
-                            <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                            <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true" class="icon-ic-close-24px fz14"></span></button>
                         </div>
 
                         <div class="modal-body pad-b-0 mar-b-20">
@@ -862,7 +862,7 @@
                 <div class="modal-dialog" role="document">
                     <div class="modal-content">
                         <div class="modal-header">
-                            <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                            <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true" class="icon-ic-close-24px fz14"></span></button>
                         </div>
 
                         <div class="modal-body pad-b-0 mar-b-20">
@@ -936,8 +936,8 @@
                         </div>
 
                         <div class="modal-footer text-center mar-b-25 pad-t-0">
-                            <button class="btn btn-primary fw-bold">Create</button>
-                            <button class="btn btn-default btn-hvr-pink fw-bold" data-dismiss="modal">Cancel</button>
+                            <button class="btn btn-primary fw-bold w-130px">Create</button>
+                            <button class="btn btn-default btn-hvr-pink fw-bold w-130px" data-dismiss="modal">Cancel</button>
                         </div>
                     </div>
                 </div>
