--- a/product-reviews-page.html
+++ b/product-reviews-page.html
@@ -351,7 +351,99 @@
             <!-- END: Action top 1 -->
 
             <!-- Product review -->
-            
+            <div class="product-star-preview mar-b-25 bg-white pad-15">
+                <div class="row">
+                    <div class="col-md-7">
+                        <!-- Media Object Point -->
+                        <div class="media media--point">
+                            <div class="media-left media-middle">
+                                <img src="http://via.placeholder.com/150x150" class="img-rounded" alt="">
+                            </div>
+
+                            <div class="media-body media-body--write-new">
+                                <span class="fz15 fw-bold mar-t-0 mar-b-10 color-grey-800 d-inline-block">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis velit. Integer consequat, </span>
+                                <div class="p-relative">
+                                    <div class="media-body_rating mar-b-15">
+                                        <div class="media_rating-box d-inline-block text-center">
+                                            <input type="hidden" class="rating-tooltip-manual" data-filled="ali-rating ali-rating--star icon-ic-star-24px" data-empty="ali-rating ali-rating--star icon-ic-star-border-24px" data-fractions="2"/>
+                                        </div>
+                                        <span class="fz13 color-grey-800">(Base on 110 Reviews)</span>
+                                    </div>
+                                    <p class="fz13 mar-b-0 mar-b-15-xs">Collection: <span class="fw-bold" style="color: #3B86FF;">Usb cable, Laptop</span></p>
+
+                                    <button class="btn btn-primary fw-bold">Write a review</button>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- END: Media Object Point -->
+                    </div>
+
+                    <div class="col-md-5">
+                        <ul class="star-process list-unstyled">
+                            <li>
+                                <p class="point">
+                                    <span class="fz13 color-grey-800">5</span>
+                                    <span class="icon-icon_star-1"></span>
+                                </p>
+                                <div>
+                                    <div class="progress">
+                                        <div class="progress-bar progress-warning progress-bar-striped active" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width:40%"></div>
+                                    </div>
+                                </div>
+                                <span class="fz13 color-grey-800 text-right">(15)</span>
+                            </li>
+                            <li>
+                                <p class="point">
+                                    <span class="fz13 color-grey-800">4</span>
+                                    <span class="icon-icon_star-1"></span>
+                                </p>
+                                <div>
+                                    <div class="progress">
+                                        <div class="progress-bar progress-warning progress-bar-striped active" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width:90%"></div>
+                                    </div>
+                                </div>
+                                <span class="fz13 color-grey-800 text-right">(112)</span>
+                            </li>
+                            <li>
+                                <p class="point">
+                                    <span class="fz13 color-grey-800">3</span>
+                                    <span class="icon-icon_star-1"></span>
+                                </p>
+                                <div>
+                                    <div class="progress">
+                                        <div class="progress-bar progress-warning progress-bar-striped active" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width:40%"></div>
+                                    </div>
+                                </div>
+                                <span class="fz13 color-grey-800 text-right">(3)</span>
+                            </li>
+                            <li>
+                                <p class="point">
+                                    <span class="fz13 color-grey-800">2</span>
+                                    <span class="icon-icon_star-1"></span>
+                                </p>
+                                <div>
+                                    <div class="progress">
+                                        <div class="progress-bar progress-warning progress-bar-striped active" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width:20%"></div>
+                                    </div>
+                                </div>
+                                <span class="fz13 color-grey-800 text-right">(2)</span>
+                            </li>
+                            <li>
+                                <p class="point">
+                                    <span class="fz13 color-grey-800">1</span>
+                                    <span class="icon-icon_star-1"></span>
+                                </p>
+                                <div>
+                                    <div class="progress">
+                                        <div class="progress-bar progress-warning progress-bar-striped active" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width:20%"></div>
+                                    </div>
+                                </div>
+                                <span class="fz13 color-grey-800 text-right">(12)</span>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
             <!-- END: Product review -->
             
             <!-- wrapper-tbl-action 2 -->
