--- a/create-reviews-page.html
+++ b/create-reviews-page.html
@@ -340,7 +340,7 @@
                         <div class="input-group">
                             <input type="text" class="form-control" placeholder="Your page link">
                             <span class="input-group-btn">
-                                <button type="submit" class="btn btn-primary fw-bold" style="height: 40px;">Add Page</button>
+                                <button type="submit" class="btn btn-primary fw-bold _btn-add-page">Add Page</button>
                               </span>
                         </div>
                         <!-- /input-group -->
