--- a/modal-page.html
+++ b/modal-page.html
@@ -492,7 +492,18 @@
 
                         <div class="modal-body text-center">
                             <div class="modal-body__logo mar-b-30">
-                                <img src="images/modals/waiting.png" alt="">
+                                <span>
+                                    <div id="floatingBarsG" style="transform: scale(.6);">
+                                        <div class="blockG" id="rotateG_01"></div>
+                                        <div class="blockG" id="rotateG_02"></div>
+                                        <div class="blockG" id="rotateG_03"></div>
+                                        <div class="blockG" id="rotateG_04"></div>
+                                        <div class="blockG" id="rotateG_05"></div>
+                                        <div class="blockG" id="rotateG_06"></div>
+                                        <div class="blockG" id="rotateG_07"></div>
+                                        <div class="blockG" id="rotateG_08"></div>
+                                    </div> 
+                                </span>
                             </div>
 
                             <div class="modal-body__content modal-pad-30 mar-b-35">
@@ -573,7 +584,11 @@
                         <div class="modal-body text-center mar-b-30">
                             <div class="modal-body__content modal-pad-30">
                                 <div class="modal-body__logo mar-b-30">
-                                    <img src="images/modals/saving.png" alt="">
+                                    <!-- <img src="images/modals/saving.png" alt=""> -->
+                                    <span class="ani-box-saving">
+                                        <img src="images/modals/saving-1.png" class="pulse">
+                                        <img src="images/modals/saving-2.png" class="pulse">
+                                    </span>
                                 </div>
                                 <p class="title-note mar-b-5">Saving reviews to your shop</p>
                                 <p class="sub-note">Just take a coffee</p>
@@ -719,12 +734,12 @@
                                     <div class="col-xs-6">
                                         <p class="title-note mar-b-20 ">Only with star</p>
                                         <div class="fz11">
-                                            <label class="wrap-custom-box fw-light mar-b-15"> Only get <span class="fw-bold color-pink">5 stars</span> reviews
+                                            <label class="wrap-custom-box fw-normal mar-b-15"> Only get <span class="fw-bold color-pink">5 stars</span> reviews
                                                 <input type="checkbox" checked="checked">
                                                 <span class="checkmark-ckb"></span>
                                             </label>
 
-                                            <label class="wrap-custom-box fw-light mar-b-15"> Only get <span class="fw-bold color-pink">4 stars</span> reviews
+                                            <label class="wrap-custom-box fw-normal mar-b-15"> Only get <span class="fw-bold color-pink">4 stars</span> reviews
                                                 <input type="checkbox" checked="checked">
                                                 <span class="checkmark-ckb"></span>
                                             </label>
@@ -734,12 +749,12 @@
                                     <div class="col-xs-6">
                                         <p class="title-note mar-b-20 ">Only with content</p>
                                         <div class="fz11">
-                                            <label class="wrap-custom-box fw-light mar-b-15"> Only review with <span class="fw-bold color-pink">photos</span>
+                                            <label class="wrap-custom-box fw-normal mar-b-15"> Only review with <span class="fw-bold color-pink">photos</span>
                                                 <input type="checkbox" checked="checked">
                                                 <span class="checkmark-ckb"></span>
                                             </label>
 
-                                            <label class="wrap-custom-box fw-light mar-b-15"> Only review with <span class="fw-bold color-pink">content</span>
+                                            <label class="wrap-custom-box fw-normal mar-b-15"> Only review with <span class="fw-bold color-pink">content</span>
                                                 <input type="checkbox" checked="checked">
                                                 <span class="checkmark-ckb"></span>
                                             </label>
@@ -750,7 +765,7 @@
                                 <div class="row">
                                     <div class="col-md-12 fz11">
                                         <p class="title-note mar-b-20 ">Translate review info</p>
-                                        <label class="wrap-custom-box fw-light mar-b-15"> English using google translate
+                                        <label class="wrap-custom-box fw-normal mar-b-15"> English using google translate
                                             <input type="checkbox" checked="checked">
                                             <span class="checkmark-ckb"></span>
                                         </label>
