--- a/welcome-page.html
+++ b/welcome-page.html
@@ -69,7 +69,7 @@
 	<link rel="shortcut icon" type="image/x-icon" href=""  />
     
     <link rel="stylesheet" href="css/app.bootstrap.css">
-    <link rel="stylesheet" href="sources/animate/animate.css">
+    <!-- <link rel="stylesheet" href="sources/animate/animate.css"> -->
 
     <!-- font-ali-awesome -->
     <link rel="stylesheet" href="sources/font-ali-awesome/font-ali-awesome.css">
