--- a/index - Copy (2).html
+++ b/index - Copy (2).html
@@ -71,7 +71,6 @@
 
     <link rel="stylesheet" href="css/app.bootstrap.css">
     <link rel="stylesheet" href="sources/animate/animate.css">
-    <link rel="stylesheet" href="sources/font-awesome/css/font-awesome.min.css">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700" rel="stylesheet">
 
     <!-- font-ali-awesome -->
@@ -88,14 +87,14 @@
 </head>
 <!-- body class: navbar-fixed -->
 
-<body>
+<body class="navbar-fixed">
     <div class="wrapper">
         <!-- HEADER -->
         <header class="main-header">
             <a href="#" class="logo">
                 <!-- <button class="btn-link sidebar-toggle hidden-xs hidden-sm" data-toggle="push-menu" role="button">
-                            <span class="icon-ic-menu-24px"></span>
-                        </button> -->
+                <span class="icon-ic-menu-24px"></span>
+            </button> -->
                 <!-- mini logo for sidebar mini 50x50 pixels -->
                 <!-- <span class="logo-mini"><b>A</b>LR</span> -->
 
@@ -118,7 +117,7 @@
                     </li>
 
                     <li>
-                        <a href="#" class="current-active">Create Reviews</a>
+                        <a href="#" class="current-active">Manage Reviews</a>
                     </li>
                 </ul>
 
@@ -128,17 +127,15 @@
                     <ul class="nav navbar-nav">
                         <!-- Button -->
                         <!-- Messages: style can be found in-->
-                        <li class="hidden visible-lg-block wrap-unlimited">
-                            <button href="#" class="btn btn-primary fw600">
-                                You’re using
-                                <span class="color-pink">FREE</span> version. Get more with
-                                <span class="color-pink">UNLIMITED</span>
-                            </button>
-                        </li>
+                        <!-- <li class="hidden-xs hidden-sm">
+                        <button href="#" class="btn btn-primary fw-bold">
+                            You’re using <span class="color-pink">FREE</span> version. Get more with <span class="color-pink">UNLIMITED</span>
+                        </button>
+                    </li> -->
 
                         <li class="dropdown dropdown-header-menu tasks-menu">
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                                <span class="icon-ic-dashboard-24px"></span>
+                                <span class="icon-icon_help-center"></span>
                                 <!-- <span class="label label-success">4</span> -->
                             </a>
                             <div class="dropdown-menu">
@@ -165,6 +162,82 @@
                                 </div>
                             </div>
                         </li>
+
+
+                        <li class="dropdown dropdown-header-menu messages-menu">
+                            <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+                                <i class="icon-icon_chat-notification-1"></i>
+                            </a>
+                            <div class="dropdown-menu">
+                                <div class="header fz17 fw-bold">Message</div>
+                                <ul class="list-unstyled">
+                                    <li class="item error">
+                                        <a href="">
+                                            <p class="fw-bold fz13 color-grey-400 mar-b-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quasi, ducimus?Lorem
+                                                ipsum dolor sit amet.</p>
+                                            <p class="fz11 color-grey-400">Lorem ipsum dolor sit amet. ipsum dolor sit amet. ipsum dolor sit amet.</p>
+                                        </a>
+                                    </li>
+
+                                    <li class="item">
+                                        <a href="">
+                                            <p class="fw-bold fz13 color-grey-400 mar-b-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quasi, ducimus?Lorem
+                                                ipsum dolor sit amet.</p>
+                                            <p class="fz11 color-grey-400">Lorem ipsum dolor sit amet. ipsum dolor sit amet. ipsum dolor sit amet.</p>
+                                        </a>
+                                    </li>
+                                    <li class="item error">
+                                        <a href="">
+                                            <p class="fw-bold fz13 color-grey-400 mar-b-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quasi, ducimus?Lorem
+                                                ipsum dolor sit amet.</p>
+                                            <p class="fz11 color-grey-400">Lorem ipsum dolor sit amet. ipsum dolor sit amet. ipsum dolor sit amet.</p>
+                                        </a>
+                                    </li>
+
+                                    <li class="item">
+                                        <a href="">
+                                            <p class="fw-bold fz13 color-grey-400 mar-b-5">1 Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quasi, ducimus?Lorem
+                                                ipsum dolor sit amet.</p>
+                                            <p class="fz11 color-grey-400">Lorem ipsum dolor sit amet. ipsum dolor sit amet. ipsum dolor sit amet.</p>
+                                        </a>
+                                    </li>
+                                    <li class="item error">
+                                        <a href="">
+                                            <p class="fw-bold fz13 color-grey-400 mar-b-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quasi, ducimus?Lorem
+                                                ipsum dolor sit amet.</p>
+                                            <p class="fz11 color-grey-400">Lorem ipsum dolor sit amet. ipsum dolor sit amet. ipsum dolor sit amet.</p>
+                                        </a>
+                                    </li>
+
+                                    <li class="item">
+                                        <a href="">
+                                            <p class="fw-bold fz13 color-grey-400 mar-b-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quasi, ducimus?Lorem
+                                                ipsum dolor sit amet.</p>
+                                            <p class="fz11 color-grey-400">Lorem ipsum dolor sit amet. ipsum dolor sit amet. ipsum dolor sit amet.</p>
+                                        </a>
+                                    </li>
+                                    <li class="item error">
+                                        <a href="">
+                                            <p class="fw-bold fz13 color-grey-400 mar-b-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quasi, ducimus?Lorem
+                                                ipsum dolor sit amet.</p>
+                                            <p class="fz11 color-grey-400">Lorem ipsum dolor sit amet. ipsum dolor sit amet. ipsum dolor sit amet.</p>
+                                        </a>
+                                    </li>
+
+                                    <li class="item">
+                                        <a href="">
+                                            <p class="fw-bold fz13 color-grey-400 mar-b-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quasi, ducimus?Lorem
+                                                ipsum dolor sit amet.</p>
+                                            <p class="fz11 color-grey-400">Lorem ipsum dolor sit amet. ipsum dolor sit amet. ipsum dolor sit amet.</p>
+                                        </a>
+                                    </li>
+                                </ul>
+                                <div class="footer">
+                                    <a href="#" class="color-dark-blue">See all</a>
+                                </div>
+                            </div>
+                        </li>
+
 
                         <li class="dropdown dropdown-header-menu notifications-menu">
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown">
@@ -234,20 +307,20 @@
                     </li>
 
                     <li>
-                        <a data-toggle="collapse" href="#treeview_1" class="ico-favorite" aria-expanded="true">Manage Reviews</a>
-                        <div id="treeview_1" class="panel-collapse collapse in" aria-expanded="true">
+                        <a data-toggle="collapse" href="#treeview_1" class="ico-favorite">Manage Reviews</a>
+                        <div id="treeview_1" class="panel-collapse collapse">
                             <div class="panel-body">
                                 <ul>
                                     <li>
                                         <a href="dashboard-manage-reviews-page.html" class="">No name</a>
                                     </li>
                                     <li>
-                                        <a href="#" class="ico-hourglass">Pending Reviews</a>
+                                        <a href="pending-reviews-page.html" class="ico-hourglass">Pending Reviews</a>
                                     </li>
                                     <li>
                                         <a href="approve-reviews-page.html" class="ico-approve-review">Approve Reviews</a>
                                     </li>
-                                    <li class="active">
+                                    <li>
                                         <a href="create-reviews-page.html" class="ico-create-review">Create Review Page</a>
                                     </li>
                                     <li>
@@ -269,8 +342,8 @@
                                     <li>
                                         <a href="#" class="ico-input-form">Input Form Edit</a>
                                     </li>
-                                    <li>
-                                        <a href="comment-form-layout.html" class="ico-comment-form">Comment Form Edit</a>
+                                    <li class="active">
+                                        <a href="#" class="ico-comment-form">Comment Form Edit</a>
                                     </li>
                                 </ul>
                             </div>
@@ -282,7 +355,7 @@
                     </li>
 
                     <li>
-                        <a href="getting-started-page.html" class="ico-get-star">Get starts</a>
+                        <a href="getting-started.html" class="ico-get-star">Get starts</a>
                     </li>
 
                     <li>
@@ -300,33 +373,60 @@
         <!-- CONTENT WRAPPER -->
         <div class="wrapper-content">
             <div class="clearfix"></div>
-            <!-- Content -->
-            <div class="wrapper-space wrapper-space--45 bg-white create-reviews-page">
-                <h1 class="ali-title-normal color-dark-blue mar-t-0 mar-b-15">Creating Reviews Page</h1>
-                <p class="ali-body-medium mar-b-30">Support to create a review page that can show entire reviews on the store in the same place:</p>
+            <div class="wrapper-space wrapper-space--45 bg-white">
 
-                <div class="row">
-                    <div class="col-md-7">
-                        <form class="mar-b-50">
-                            <div class="input-group">
-                                <input type="text" class="form-control" placeholder="Your page link">
-                                <span class="input-group-btn">
-                                    <button type="submit" class="btn btn-primary fw-bold _btn-add-page">Add Page</button>
-                                </span>
-                            </div>
-                            <!-- /input-group -->
-                        </form>
-                    </div>
-                </div>
+                <!-- prettier-ignore-start -->
+                | some | table | | ----s | --- - | | some | tabl e | | some | table |
 
-                <p class="ali-body-medium mar-b-30 fw600">Or paste the code below into the available page:</p>
-                <div class="row">
-                    <div class="col-md-7">
-                        <textarea name="" rows="5" class="form-control vertical-resize"></textarea>
-                    </div>
-                </div>
+                <!-- prettier-ignore-end -->
+                <ul>
+                    <li>
+                        <a href="component.html" class="color-pink fw-bold">Components</a>
+                    </li>
+                    <li>
+                        <a href="approve-reviews-page.html">Approve reviews page</a>
+                    </li>
+                    <li>
+                        <a href="comment-form-layout.html">Comment form layout</a>
+                    </li>
+                    <li>
+                        <a href="create-reviews-page.html">Create reviews page</a>
+                    </li>
+                    <li>
+                        <a href="dashboard-general-setting-page.html">Dashboard general setting page</a>
+                    </li>
+                    <li>
+                        <a href="dashboard-manage-reviews-page.html">Dashboard manage reviews page</a>
+                    </li>
+                    <li>
+                        <a href="default-reviews-page.html">Default reviews page</a>
+                    </li>
+                    <li>
+                        <a href="error-page.html">Error page</a>
+                    </li>
+                    <li>
+                        <a href="form-layout-menu.html">Form layout menu</a>
+                    </li>
+                    <li>
+                        <a href="modal-page.html">Modal page</a>
+                    </li>
+                    <li>
+                        <a href="pending-reviews-page.html">Pending reviews page</a>
+                    </li>
+                    <li>
+                        <a href="preview-badge.html">Preview badge</a>
+                    </li>
+                    <li>
+                        <a href="product-reviews-page.html">Product reviews page</a>
+                    </li>
+                    <li>
+                        <a href="upgrade-version-page.html">Upgrade version page</a>
+                    </li>
+                    <li>
+                        <a href="welcome-page.html">Welcome page</a>
+                    </li>
+                </ul>
             </div>
-            <!-- END: Content -->
         </div>
         <!-- END: CONTENT WRAPPER -->
 
@@ -337,8 +437,8 @@
     <script src="sources/bootstrap-3/js/bootstrap.min.js"></script>
     <script src="sources/animate/wow.min.js"></script>
 
-    <!-- SCRIPT PAGE -->
-    <!-- /SCRIPT PAGE -->
+    <!-- ============================= SCRIPT PAGE ============================= -->
+    <!-- =========================== END: SCRIPT PAGE ========================== -->
 
     <script type="text/javascript" src="js/scripts.js"></script>
 
